data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_894.wast
;; 5. **Function Call with Indirect Branch:**    - Description: Create a function that calls another function indirectly via `call_indirect`, and within the called function, use a `br` to branch out of a `block`. Ensure the proper function returns.    - Constraint: This focuses on verifying whether the `br` correctly handles indirect function calls, especially with regard to operand stack and return values.

(assert_invalid
  (module
    (type $sig (func (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (result i32)
      (block (result i32)
        (br 0) (i32.const 42)
      )
      (call_indirect (type $sig) (i32.const 0))
    )
  )
  "type mismatch"
)